--- a/templates/base.html
+++ b/templates/base.html
@@ -11,13 +11,10 @@
     <title>{% block title %}{% endblock %}</title>
   </head>
   <body>
-
-    <div class="d-flex">
-        {% block nav %}{% endblock %}
-        {% block header %}{% endblock %}
-        {% block content %}{% endblock %}
-        {% block footer %}{% endblock %}
-    </div>
+    <nav>{% include 'includes/navigation.html' %}</nav>
+    {% block header %}{% endblock %}
+    {% block body %}{% endblock %}
+    <footer>{% include 'includes/footer.html' %}</footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
