--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,13 @@
 {% extends 'base.html' %}
 
-{% block title %}ABOUT{% endblock %}
+{% block title %}
+  ABOUT
+{% endblock %}
 
 {% block body %}
-ABOUT YOUR PAGE
+<div class="container-fluid">
+    <div class="d-flex flex-column">
+        ABOUT PAGE
+    </div>
+</div>
 {% endblock %}
