--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -1,1 +1,29 @@
-Your Navigation here
+<nav class="navbar navbar-expand-sm navbar-light bg-danger mb-2">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-content" aria-controls="nav-content" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <!-- Brand -->
+    <a class="navbar-brand" href="/">Logo</a>
+
+    <!-- Links -->
+    <div class="collapse navbar-collapse justify-content-end" id="nav-content">
+    <ul class="navbar-nav">
+
+        {% if not current_user.is_authenticated %}
+        <li class="nav-item">
+            <a class="nav-link" href="login">Log In</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="register">Register</a>
+        </li>
+        {% else %}
+        <li class="nav-item">
+             <a class="nav-link" href="logout">log Out</a>
+        </li>
+        {% endif %}
+        <li class="nav-item">
+            <a class="nav-link" href="about">About</a>
+        </li>
+    </ul>
+</nav>
