--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,1 +1,10 @@
-Your footer
+<!-- Footer -->
+<section id="footer" class="footer fixed-bottom bg-dark">
+	<div class="d-flex flex-column">
+		<div class="text-center text-white">
+			<p class="h6">&copy All Right Reserved.<a class="text-green ml-2" href="" target="_blank">enzhahir</a></p>
+		</div>
+		</hr>
+	</div>
+</section>
+<!-- ./Footer -->
